--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   color: #fff;
   background: #1b1b1b;
