--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,6 @@
 body {
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  color: #fff;
-  background: #1b1b1b;
+  color: var(--foreground);
+  background: var(--background);
 }
