--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,8 @@
 
 :root {
   --radius: 0.5rem;
-
+  --spacing-unit: 1rem;
+  
   --background: #ffffff;
   --bgSecondary: #f2f2f2;
   --foreground: #000000;
