--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
   --foreground: #000000;
 
   --card: #f2f2f2;
+  --cardSecondary: #f3f3f3;
   --card-foreground: #000000;
 
   --popover: #ffffff;
@@ -58,6 +59,7 @@
   --foreground: #ffffff;
 
   --card: #2b2b2b;
+  --cardSecondary: #2d2d2d;
   --card-foreground: #ffffff;
 
   --popover: #2b2b2b;
