--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
   
   --background: #ffffff;
   --bgSecondary: #f2f2f2;
-  --bgTertiary: #f3f3f3;
+  --bgTertiary: #dedede;
   --foreground: #000000;
 
   --card: #f2f2f2;
