--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,13 +12,13 @@
   --radius: 0.5rem;
   --spacing-unit: 1rem;
   
-  --background: #ffffff;
+  --background: #f9f9f9;
   --bgSecondary: #f2f2f2;
-  --bgTertiary: #dedede;
+  --bgTertiary: #d8d8d8;
   --foreground: #000000;
 
-  --card: #f2f2f2;
-  --cardSecondary: #f3f3f3;
+  --card: #e0e0e0;
+  --cardSecondary: #e7e7e7;
   --card-foreground: #000000;
 
   --popover: #ffffff;
