--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,13 +12,13 @@
   --radius: 0.5rem;
   --spacing-unit: 1rem;
   
-  --background: #f9f9f9;
-  --bgSecondary: #f2f2f2;
+  --background: #F4F4F4;
+  --bgSecondary: #EEEEEE;
   --bgTertiary: #d8d8d8;
   --foreground: #000000;
 
-  --card: #e0e0e0;
-  --cardSecondary: #e7e7e7;
+  --card: #e9e9e9;
+  --cardSecondary: #e9e9e9;
   --card-foreground: #000000;
 
   --popover: #ffffff;
@@ -27,10 +27,10 @@
   --primary: #ff6a00;
   --primary-foreground: #ffffff;
 
-  --secondary: #3b3b3b;
+  --secondary: #1515158a;
   --secondary-foreground: #ffffff;
 
-  --muted: #949494;
+  --muted: #6A6A6A;
   --muted-foreground: #ffffff;
 
   --accent: #4fc3f7;
@@ -44,7 +44,7 @@
   --ring: #ff6a00;
 
   --sidebar: #f2f2f2;
-  --sidebar-foreground: #000000;
+  --sidebar-foreground: #212121;
   --sidebar-primary: #ff6a00;
   --sidebar-primary-foreground: #ffffff;
   --sidebar-accent: #4fc3f7;
@@ -68,10 +68,11 @@
   --primary: #ff6a00;
   --primary-foreground: #ffffff;
 
-  --secondary: #3b3b3b;
+  --secondary: #444444;
   --secondary-foreground: #ffffff;
 
-  --muted: #949494;
+  --muted: #898989;
+  --muted-search: #6A6A6A;
   --muted-foreground: #ffffff;
 
   --accent: #4fc3f7;
