--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@
   --foreground: #000000;
 
   --card: #e9e9e9;
-  --cardSecondary: #e9e9e9;
+  --cardSecondary: #ebebeb;
+  --cardTertiary: #e1e1e1;
   --card-foreground: #000000;
 
   --popover: #ffffff;
@@ -60,6 +61,7 @@
 
   --card: #2b2b2b;
   --cardSecondary: #2d2d2d;
+  --cardTertiary: #272727;
   --card-foreground: #ffffff;
 
   --popover: #2b2b2b;
