--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
   --bgTertiary: #d8d8d8;
   --foreground: #000000;
 
+  --bgCardMetrics: #ffffff;
+
   --card: #e9e9e9;
   --cardSecondary: #ebebeb;
   --cardTertiary: #e1e1e1;
@@ -58,6 +60,8 @@
   --bgSecondary: #1d1d1d;
   --bgTertiary: #1e1e1e;
   --foreground: #ffffff;
+
+  --bgCardMetrics: #000000;
 
   --card: #2b2b2b;
   --cardSecondary: #2d2d2d;
