--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@
 
   --bgCardMetrics: #ffffff;
 
+  --error: #ff2d00;
+
   --card: #e9e9e9;
   --cardSecondary: #ebebeb;
   --cardTertiary: #e1e1e1;
@@ -63,6 +65,8 @@
   --foreground: #ffffff;
 
   --bgCardMetrics: #000000;
+
+  --error: #ff2d00;
 
   --card: #2b2b2b;
   --cardSecondary: #2d2d2d;
